# SoftBody-Sim

./: .gitignore  CMakeLists.txt  README.md  Soft_Body  main.cpp
shaders/: frag.shader  vert.shader
src/: Camera.cpp  Camera.h  Sphere.cpp  Sphere.h  main.cpp
